Backport lv_lib_freetype from LVGL v8.x #249

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -41,6 +41,9 @@ build_flags =
 	;-D CONFIG_LITTLEFS_FOR_IDF_3_2  ; obsolete in IDF 3.3
 ; -- FreeType build options ------------------------
     -D HASP_USE_FREETYPE=1
+    -D LV_USE_FREETYPE=1
+    -D LV_FREETYPE_SBIT_CACHE=1             ; use small bitmap cache
+    -D LV_FREETYPE_CACHE_SIZE=1             ; cache freetype font sizes
     -D LV_USE_FT_CACHE_MANAGER=1            ; crashes without cache
     -D LVGL_FREETYPE_MAX_FACES=16           ; max number of FreeType faces in cache
     -D LVGL_FREETYPE_MAX_SIZES=16           ; max number of sizes in cache
