Update to Tasmota Arduino core v2.0.3 final

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -130,7 +130,7 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 ; -- The Arduino ESP32 v2.0.2 with 3 available flash sizes:
 [arduino_esp32_v2]
 framework = arduino
-platform = https://github.com/tasmota/platform-espressif32
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.3/platform-espressif32-v.2.0.3.zip
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
