--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -96,7 +96,7 @@ fspi =
 ; -- The Arduino ESP32S2 v2.0.2 with 3 available flash sizes:
 [arduino_esp32s2_v2]
 framework = arduino
-platform = https://github.com/tasmota/platform-espressif32
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.3/platform-espressif32-v.2.0.3.zip
 board_build.embed_files =
     data/edit.htm.gz
     data/style.css.gz
@@ -131,7 +131,7 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 ; -- The Arduino ESP32S2-solo v2.0.2 with 3 available flash sizes:
 [arduino_esp32s2-solo_v2]
 framework = arduino
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.3rc1/platform-espressif32-2.0.3solo1.zip
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.3/platform-espressif32-solo1-v.2.0.3.zip
 board_build.embed_files =
     data/edit.htm.gz
     data/style.css.gz
