Fix black screen on WT32-SC01

--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -41,8 +41,8 @@ lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
-    ${tft_espi.lib_deps}
-    ; ${lovyangfx.lib_deps}
+    ; ${tft_espi.lib_deps}
+    ${lovyangfx.lib_deps}
     ${ft6336.lib_deps}
 
 lib_ignore =
