Inline LCD build flags for lovyan driver

--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -17,8 +17,13 @@ build_flags =
     ;-D HASP_USE_OTA=0   ; No ArduinoOTA on port 3232
     
 ;region -- TFT_eSPI build options ------------------------
-    ${lcd.wt32-sc01}
-    -D WT32SC01
+    -D LGFX_USE_V1=1
+    ;-D USER_SETUP_LOADED=1
+    -D ST7796_DRIVER=1
+    -D TFT_WIDTH=320
+    -D TFT_HEIGHT=480
+    -D TFT_ROTATION=0 ; see TFT_ROTATION values
+    -D SPI_FREQUENCY=40000000
     -D TFT_RST=22
     -D TFT_SCLK=14
     -D TFT_DC=21
