--- a/platformio.ini
+++ b/platformio.ini
@@ -67,7 +67,7 @@ build_flags =
     -D HASP_VER_MAJ=0
     -D HASP_VER_MIN=6
     ;-D HASP_VER_REV=3
-    -D HASP_VER_REV=3-dev
+    -D HASP_VER_REV=3-rc1
     ${override.build_flags}
 
 ; -- Shared library dependencies in all environments
