--- a/user_setups/esp32/esp32-dev_ili9488.ini
+++ b/user_setups/esp32/esp32-dev_ili9488.ini
@@ -14,14 +14,12 @@ build_flags =
     ${esp32.no_ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
+    ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D USER_SETUP_LOADED=1
     -D ILI9488_DRIVER=1
     -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
-    -D TFT_MISO=19 ;// (leave TFT SDO disconnected if other SPI devices share MISO)
-    -D TFT_MOSI=23
-    -D TFT_SCLK=18
     -D TFT_CS=15  ;// Chip select control pin
     -D TFT_DC=2  ;// Data Command control pin
     -D TFT_RST=4 ;// Reset pin (could connect to RST pin)
