--- a/user_setups/stm32f7xx/nucleo_f767zi-ili9486.ini
+++ b/user_setups/stm32f7xx/nucleo_f767zi-ili9486.ini
@@ -54,7 +54,7 @@ build_flags =
     -D HASP_USE_CONSOLE=1
     -D HASP_USE_GPIO=0
     -D HASP_USE_TASMOTA_CLIENT=0
-    -D HASP_USE_OTA=0
+    -D HASP_USE_ARDUINOOTA=0
     -D HASP_USE_ETHERNET=1
     -D USE_BUILTIN_ETHERNET=1
     -D HASP_ATTRIBUTE_FAST_MEM=
