--- a/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
+++ b/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
@@ -62,7 +62,7 @@ build_flags =
     -D HASP_USE_SPIFFS=0
     -D HASP_USE_EEPROM=1
     -D HASP_USE_GPIO=0
-    -D HASP_USE_OTA=0
+    -D HASP_USE_ARDUINOOTA=0
     -D HASP_USE_ETHERNET=0
 ;endregion
 
