--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,8 +42,8 @@ jobs:
             out: m5stack
           - env: makerfabs-tft35-cap
             out: makerfabs-tft
-          - env: ttgo-t7-v1.5_ili9341
-            out: ttgo-t7
+          - out: ttgo
+            env: "ttgo-t7-v1.5_ili9341_4MB -e ttgo-t7-v1.5_ili9341_16MB"
           - out: wireless-tag
             env: "wt32-sc01_4MB -e wt32-sc01_16MB -e wt-86-32-3zw1"
           - env: yeacreate-nscreen32
