--- a/user_setups/esp32/ttgo-t7-v1.5_ili9341.ini
+++ b/user_setups/esp32/ttgo-t7-v1.5_ili9341.ini
@@ -5,7 +5,7 @@
 ;               - xpt2046 touch controller          ;
 ;***************************************************;
 
-[env:ttgo-t7-v1.5_ili9341]
+[ttgo-t7-v1.5_ili9341]
 extends = esp32_4mb_v2
 board = esp32dev
 
@@ -38,3 +38,9 @@ lib_ignore =
     ${esp32.lib_ignore}
     ${arduino_esp32_v2.lib_ignore}
 ;endregion
+
+[env:ttgo-t7-v1.5_ili9341_4MB]
+extends = ttgo-t7-v1.5_ili9341, esp32_4mb_v2
+
+[env:ttgo-t7-v1.5_ili9341_16MB]
+extends = ttgo-t7-v1.5_ili9341, esp32_16mb_v2
