Fix touch controller in header

--- a/user_setups/esp32/makerfabs-tft35-cap.ini
+++ b/user_setups/esp32/makerfabs-tft35-cap.ini
@@ -1,7 +1,7 @@
 ;***************************************************;
 ;   Makerfabs TFT Touch with camera 3.5" Capacitive ;
 ;               - 3.5" ili9488 TFT SPI 4-WIRE       ;
-;               - ft6336 touch controller           ;
+;               - FT6236 touch controller           ;
 ;***************************************************;
 
 [env:makerfabs-tft35-cap]
