Update deprecated src_filter to build_src_filter

--- a/platformio.ini
+++ b/platformio.ini
@@ -94,7 +94,7 @@ lib_deps =
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
 
-src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font_montserrat_*.c>
+build_src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font_montserrat_*.c>
 
 [lovyangfx]
 lib_deps =
