--- a/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
@@ -61,5 +61,5 @@ lib_ignore =
     XPT2046_Touchscreen
     lv_lib_zifont
 
-src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
+build_src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
 ;endregion
