--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
@@ -76,5 +76,5 @@ lib_ignore =
     XPT2046_Touchscreen
     lv_lib_zifont
 
-src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/> +<espspi/>
+build_src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/> +<espspi/>
 ;endregion
