--- a/platformio.ini
+++ b/platformio.ini
@@ -66,8 +66,8 @@ build_flags =
     ; -- Hasp build options ----------------------------
     -D HASP_VER_MAJ=0
     -D HASP_VER_MIN=6
-    -D HASP_VER_REV=3
-    ;-D HASP_VER_REV=4-dev
+    ;-D HASP_VER_REV=4
+    -D HASP_VER_REV=4-dev
     ;-D HASP_VER_REV=4-rc1
     ${override.build_flags}
 
