--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,7 @@ on:
     types: [created]
   push:
     branches:
-      - main
+      - master
     paths-ignore:
       - '**.md'
       - '**.yml'
