Move ESP32 lip_deps

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -71,6 +71,9 @@ lib_ignore =
 lib_deps =
     git+https://github.com/fvanroie/ConsoleInput.git#dev
     lorol/LittleFS_esp32@^1.0.6   ; for v1
+    bxparks/AceButton@^1.9.2         ; GPIO button library
+    bblanchon/StreamUtils@^1.6.3     ; for EEPromStream and BufferedTelnetClient
+    knolleary/PubSubClient@^2.8.0    ; MQTT client
 
 extra_scripts =
     pre:tools/auto_firmware_version.py
