--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -40,8 +40,9 @@ build_flags =
 ; -- LittleFS build options ------------------------
 	;-D CONFIG_LITTLEFS_FOR_IDF_3_2  ; obsolete in IDF 3.3
 ; -- FreeType build options ------------------------
-    -D HASP_USE_FREETYPE=1
-    -D LV_USE_FREETYPE=1
+    -D LV_USE_FS_IF=1
+    -D HASP_USE_FREETYPE=0
+    -D LV_USE_FREETYPE=0
     -D LV_FREETYPE_SBIT_CACHE=1             ; use small bitmap cache
     -D LV_FREETYPE_CACHE_SIZE=1             ; cache freetype font sizes
     -D LV_USE_FT_CACHE_MANAGER=1            ; crashes without cache
