--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -27,7 +27,9 @@ build_flags =
 ; -- lvgl build options -----------------------------
     -D LV_ATTRIBUTE_FAST_MEM=       ; smaller RAM doesn't allow for IRAM_ATTR
     -D LV_ATTRIBUTE_TASK_HANDLER=IRAM_ATTR
+    -D LV_USE_FS_IF=1
     ;-D LV_FS_PC_PATH="//littlefs"   ; this needs to match the vfs mount pount
+    -D LV_USE_FREETYPE=0
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- tft_espi build options ------------------------
@@ -44,11 +46,10 @@ build_flags =
     -D HASP_USE_BMPDECODE=1
     -D HASP_USE_JPGDECODE=0
     -D HASP_USE_GIFDECODE=0
+    -D HASP_USE_FREETYPE=0
 ; -- LittleFS build options ------------------------
 	;-D CONFIG_LITTLEFS_FOR_IDF_3_2  ; obsolete in IDF 3.3
 ; -- FreeType build options ------------------------
-    -D HASP_USE_FREETYPE=1
-    -D LV_USE_FREETYPE=1
     -D LV_FREETYPE_SBIT_CACHE=1             ; use small bitmap cache
     -D LV_FREETYPE_CACHE_SIZE=1             ; cache freetype font sizes
     -D LV_USE_FT_CACHE_MANAGER=1            ; crashes without cache
