Enable Freetype in ini files

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,7 +46,13 @@ build_flags =
     -Os          ; Code Size Optimization
     ;-Og           ; Code Debug Optimization
     ;-w           ; Suppress warnings
-    -D CORE_DEBUG_LEVEL=0           ; 0=Silent, 1=Errors, 2=Warnings
+    ;-D CORE_DEBUG_LEVEL=3           ; 0=Silent, 1=Errors, 2=Warnings
+    ;-D LOG_LOCAL_LEVEL=5 ; Verbose
+    -D LOG_MAXIMUM_LEVEL_VERBOSE
+    -D LOG_DEFAULT_LEVEL_WARNING
+    -D LOG_TIMESTAMP_SOURCE_SYSTEM
+    -D CONFIG_ARDUHAL_ESP_LOG=1
+    -D CONFIG_LOG_COLORS=1
     -I include    ; include lv_conf.h and hasp_conf.h
     ; -- littlevgl build options ------------------------------
     -D LV_CONF_INCLUDE_SIMPLE       ; for lvgl
@@ -55,6 +61,7 @@ build_flags =
     -D LV_SYMBOL_DEF_H              ; don't load default symbol defines
     -D LODEPNG_NO_COMPILE_ALLOCATORS ; use PSram functions
     -D LV_PNG_USE_LV_FILESYSTEM=1   ; use lvgl filesystem api, drive L:\
+    -D LV_USE_FILESYSTEM=1
     ; -- ESP build options ------------------------------------
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     ; -- ArduinoJson build options ----------------------------
@@ -79,8 +86,8 @@ lib_deps =
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/lvgl/lvgl.git
     git+https://github.com/lvgl/lvgl.git#release/v7
-    ;git+https://github.com/lvgl/lv_fs_if.git#release/v7
     ;lvgl/lvgl@^7.11.0                ; from PIO library
+    ;git+https://github.com/lvgl/lv_fs_if.git#release/v7
     git+https://github.com/lvgl/lv_lib_png.git#release/v7
     git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
     git+https://github.com/lvgl/lv_lib_gif.git#release/v7
