--- a/user_setups/linux_sdl/linux_sdl_64bits.ini
+++ b/user_setups/linux_sdl/linux_sdl_64bits.ini
@@ -23,6 +23,7 @@ build_flags =
   -D HASP_NUM_PAGES=12
   -D HASP_USE_SPIFFS=0
   -D HASP_USE_LITTLEFS=0
+  -D LV_USE_FS_IF=1
   -D HASP_USE_EEPROM=0
   -D HASP_USE_GPIO=1
   -D HASP_USE_CONFIG=0            ; Standalone application, as library
