Update to Tasmota core 2.0.5.1

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -10,7 +10,10 @@ board_build.embed_files =
     data/style.css.gz
     data/script.js.gz
     data/cert/x509_crt_bundle.bin
- 
+    data/static/logo.svg.gz
+    data/static/ace.1.9.6.min.js.gz
+    data/static/petite-vue.hasp.js.gz
+    
 build_flags =
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
@@ -23,7 +26,6 @@ build_flags =
     -D LV_ATTRIBUTE_TASK_HANDLER=IRAM_ATTR
     -D LV_USE_FS_IF=1
     ;-D LV_FS_PC_PATH="//littlefs"   ; this needs to match the vfs mount pount
-    -D LV_USE_FREETYPE=1
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- tft_espi build options ------------------------
@@ -40,7 +42,6 @@ build_flags =
     -D HASP_USE_BMPDECODE=1
     -D HASP_USE_JPGDECODE=0
     -D HASP_USE_GIFDECODE=0
-    -D HASP_USE_FREETYPE=1
 ; -- LittleFS build options ------------------------
 	;-D CONFIG_LITTLEFS_FOR_IDF_3_2  ; obsolete in IDF 3.3
 ; -- FreeType build options ------------------------
@@ -65,7 +66,6 @@ lib_ignore =
     Adafruit BusIO
     Adafruit GFX Library
     ESP32 BLE Arduino
-    sstaub/Ticker
     lv_drv_fsmc_ili9341
     lv_drivers
     AXP192
@@ -88,7 +88,11 @@ extra_scripts =
 ps_ram =
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue  ; uses 24kB
+    -D HASP_USE_FREETYPE=1
+    -D LV_USE_FREETYPE=1
 no_ps_ram =
+    -D HASP_USE_FREETYPE=0
+    -D LV_USE_FREETYPE=0
 
 ; -- The ESP32 has 2 SPI Hardware Busses available to use:
 vspi =
@@ -99,7 +103,6 @@ hspi =
     -D TFT_MISO=12
     -D TFT_MOSI=13
     -D TFT_SCLK=14
-
 
 ; -- The Arduino ESP32 v1.0.6 with 3 available flash sizes:
 [arduino_esp32_v1]
@@ -135,7 +138,7 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 ; -- The Arduino ESP32 v2.0.2 with 3 available flash sizes:
 [arduino_esp32_v2]
 framework = arduino
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-2.0.4.1.zip
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.5.1/platform-espressif32-2.0.5.1.zip
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
