Include new embed_files

--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -29,7 +29,6 @@ build_flags =
     -D LV_ATTRIBUTE_TASK_HANDLER=IRAM_ATTR
     -D LV_USE_FS_IF=1
     ;-D LV_FS_PC_PATH="//littlefs"   ; this needs to match the vfs mount pount
-    -D LV_USE_FREETYPE=0
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- tft_espi build options ------------------------
@@ -46,7 +45,6 @@ build_flags =
     -D HASP_USE_BMPDECODE=1
     -D HASP_USE_JPGDECODE=0
     -D HASP_USE_GIFDECODE=0
-    -D HASP_USE_FREETYPE=0
 ; -- LittleFS build options ------------------------
 	;-D CONFIG_LITTLEFS_FOR_IDF_3_2  ; obsolete in IDF 3.3
 ; -- FreeType build options ------------------------
@@ -64,7 +62,6 @@ lib_ignore =
     XPT2046_Touchscreen
     Adafruit BusIO
     Adafruit GFX Library
-    sstaub/Ticker
     lv_drv_fsmc_ili9341
     lv_drivers
     AXP192
@@ -79,7 +76,11 @@ lib_deps =
 
 ps_ram =
     -DBOARD_HAS_PSRAM
-    ;-mfix-esp32-psram-cache-issue  ; uses 24kB
+    -D HASP_USE_FREETYPE=1
+    -D LV_USE_FREETYPE=1
+no_ps_ram =
+    -D HASP_USE_FREETYPE=0
+    -D LV_USE_FREETYPE=0
 
 extra_scripts =
     tools/littlefsbuilder.py
@@ -102,11 +103,7 @@ fspi =
 [arduino_esp32s2_v2]
 framework = arduino
 platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-2.0.4.1.zip
-board_build.embed_files =
-    data/edit.htm.gz
-    data/style.css.gz
-    data/script.js.gz
-    data/cert/x509_crt_bundle.bin
+board_build.embed_files = ${esp32.board_build.embed_files}
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
@@ -137,11 +134,7 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 [arduino_esp32s2-solo_v2]
 framework = arduino
 platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-solo1-2.0.4.1.zip
-board_build.embed_files =
-    data/edit.htm.gz
-    data/style.css.gz
-    data/script.js.gz
-    data/cert/x509_crt_bundle.bin
+board_build.embed_files = ${esp32.board_build.embed_files}
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
