Add no_ps_ram/ps_ram option

--- a/user_setups/esp32s2/s2-mini-esp32s2_ili9341.ini
+++ b/user_setups/esp32s2/s2-mini-esp32s2_ili9341.ini
@@ -12,6 +12,7 @@ board = esp32s2_solo1
 build_flags =
     ${env.build_flags}
     ${esp32s2.build_flags}
+    ${esp32s2.no_ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
     -D ILI9341_DRIVER=1
