--- a/user_setups/esp32s2/wt-86-32-3zw1.ini
+++ b/user_setups/esp32s2/wt-86-32-3zw1.ini
@@ -12,8 +12,10 @@ board = esp32s2
 build_flags =
     ${env.build_flags}
     ${esp32s2.build_flags}
+    ${esp32s2.ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
+    -D LGFX_USE_V1=1
     -D ILI9488_DRIVER=1
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=320
@@ -42,7 +44,6 @@ build_flags =
     -D TOUCH_RST=12
 
     ;-D USER_SETUP_LOADED=1
-    -D LGFX_USE_V1=1
     -D SUPPORT_TRANSACTIONS
     -D SPI_TOUCH_FREQUENCY=2500000
     -D TOUCH_DRIVER=0x1680     ; GSL1680 Capacitive I2C touch panel driver
