--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -73,6 +73,8 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
       - name: Set up Python
         uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
       - name: Install PlatformIO
         run: |
           python -m pip install --upgrade pip
@@ -136,6 +138,8 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
       - name: Set up Python
         uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
       - name: Install PlatformIO
         run: |
           python -m pip install --upgrade pip
