--- a/user_setups/esp32s3/_esp32s3.ini
+++ b/user_setups/esp32s3/_esp32s3.ini
@@ -1,18 +1,19 @@
 ; -- Platform specific build flags
 [esp32s3]
+board_build.mcu = esp32s3
+board_build.f_cpu = 240000000L
+board_upload.flash_size = 4MB
+board_upload.maximum_size = 4194304
+board_build.partitions = user_setups/esp32s2/no_ota.csv
+board_build.filesystem = littlefs
+
 ; ----- debugger
 check_tool = cppcheck
 check_flags = --enable=all
 debug_tool = esp-prog
 debug_init_break = tbreak setup
-board_build.embed_files =
-    data/edit.htm.gz
-    data/style.css.gz
-    data/script.js.gz
-    data/cert/x509_crt_bundle.bin
-    data/static/logo.svg.gz
-    data/static/ace.1.9.6.min.js.gz
-    data/static/petite-vue.hasp.js.gz
+
+board_build.embed_files = ${esp32.board_build.embed_files}
 
 build_flags =
     ${env.build_flags}
@@ -86,7 +87,7 @@ extra_scripts =
 
 ps_ram =
     -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue  ; uses 24kB
+    ;-mfix-esp32-psram-cache-issue  ; uses 24kB
     -D HASP_USE_FREETYPE=1
     -D LV_USE_FREETYPE=1
 no_ps_ram =
@@ -107,8 +108,8 @@ hspi =
 ; -- The Arduino ESP32 v2.0.2 with 3 available flash sizes:
 [arduino_esp32s3_v2]
 framework = arduino
-;platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.5/platform-espressif32-2.0.5.zip
-platform = espressif32
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-2.0.4.1.zip
+;platform = espressif32
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
