SC01 Plus configuration tweaks #390

--- a/user_setups/esp32s3/wt01_sc01-plus.ini
+++ b/user_setups/esp32s3/wt01_sc01-plus.ini
@@ -7,7 +7,8 @@
 
 [env:wt01_sc01-plus]
 extends = esp32s3_8mb_v2
-board = um_tinys3
+;board = um_tinys3
+board = esp32s3
 ;board = esp32s3_opi
 
 build_flags =
@@ -27,7 +28,6 @@ build_flags =
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
     -D SPI_FREQUENCY=20000000
-    -D INVERT_COLORS=1
     -D TFT_RD=-1
     -D TFT_WR=47
     -D TFT_RS=0
@@ -43,7 +43,7 @@ build_flags =
     -D TFT_CS=-1
     -D TFT_RST=4
     -D TFT_BUSY=-1
-    -D TFT_BL=-1
+    -D TFT_BCKL=45
     -D I2C_TOUCH_FREQUENCY=400000
     -D I2C_TOUCH_ADDRESS=0x38
     -D I2C_TOUCH_PORT=1
