Set Bodmer/TFT_eSPI to master branch

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,7 +46,7 @@ build_flags =
     -Os          ; Code Size Optimization
     ;-Og           ; Code Debug Optimization
     ;-w           ; Suppress warnings
-    ;-D CORE_DEBUG_LEVEL=3           ; 0=Silent, 1=Errors, 2=Warnings
+    -D CORE_DEBUG_LEVEL=0           ; 0=Silent, 1=Errors, 2=Warnings
     ;-D LOG_LOCAL_LEVEL=5 ; Verbose
     -D LOG_MAXIMUM_LEVEL_VERBOSE
     -D LOG_DEFAULT_LEVEL_WARNING
@@ -107,7 +107,8 @@ lib_deps =
 
 [tft_espi]
 lib_deps =
-    bodmer/TFT_eSPI@2.4.72
+    ;bodmer/TFT_eSPI@2.4.72
+    https://github.com/Bodmer/TFT_eSPI.git#master
 
 [goodix]
 lib_deps =
