Update lovyanGFX version of wt-86-32-3zw1

--- a/user_setups/esp32s2/wt-86-32-3zw1.ini
+++ b/user_setups/esp32s2/wt-86-32-3zw1.ini
@@ -60,8 +60,7 @@ lib_deps =
     ${env.lib_deps}
     ${esp32s2.lib_deps}
     ${gsl1680.lib_deps}
-    ;lovyan03/LovyanGFX @ ^0.4.14
-    https://github.com/lovyan03/LovyanGFX.git#1be6600
+    ${lovyangfx.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
