--- a/user_setups/esp32s3/wt01_sc01-plus.ini
+++ b/user_setups/esp32s3/wt01_sc01-plus.ini
@@ -13,8 +13,8 @@ board = esp32s3
 
 build_flags =
     ${env.build_flags}
-    ${esp32.build_flags}
-    ${esp32.no_ps_ram}
+    ${esp32s3.build_flags}
+    ${esp32s3.ps_ram}
     -D HASP_MODEL="SC01 Plus"
     -DARDUINO_USB_CDC_ON_BOOT
 	-DUSE_USB_CDC_CONSOLE
@@ -54,12 +54,12 @@ build_flags =
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
-    ${esp32.lib_deps}
-    ${arduino_esp32_v2.lib_deps}
+    ${esp32s3.lib_deps}
+    ${arduino_esp32s3_v2.lib_deps}
     ${lovyangfx.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
+    ${esp32s3.lib_ignore}
+    ${arduino_esp32s3_v2.lib_ignore}
 ;endregion
