--- a/user_setups/esp32s3/esp32-s3-devkitc-1.ini
+++ b/user_setups/esp32s3/esp32-s3-devkitc-1.ini
@@ -12,8 +12,8 @@ board = esp32s3_opi
 
 build_flags =
     ${env.build_flags}
-    ${esp32.build_flags}
-    ${esp32.no_ps_ram}
+    ${esp32s3.build_flags}
+    ${esp32s3.no_ps_ram}
     -D HASP_MODEL="ESP32 D1 Mini"
 
 ;region -- TFT_eSPI build options ------------------------
@@ -30,12 +30,12 @@ build_flags =
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
-    ${esp32.lib_deps}
-    ${arduino_esp32_v2.lib_deps}
-    ${tft_espi.lib_deps}
+    ${esp32s3.lib_deps}
+    ${arduino_esp32s3_v2.lib_deps}
+    ${lovyangfx.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
+    ${esp32s3.lib_ignore}
+    ${arduino_esp32s3_v2.lib_ignore}
 ;endregion
