--- a/user_setups/esp32s3/wt-sc01-plus.ini
+++ b/user_setups/esp32s3/wt-sc01-plus.ini
@@ -5,11 +5,8 @@
 ;               - ft6336 touch controller           ;
 ;***************************************************;
 
-[env:wt01_sc01-plus]
-extends = esp32s3_8mb_v2
-;board = um_tinys3
+[wt-sc01-plus]
 board = esp32s3
-;board = esp32s3_opi
 
 build_flags =
     ${env.build_flags}
@@ -63,3 +60,10 @@ lib_ignore =
     ${esp32s3.lib_ignore}
     ${arduino_esp32s3_v2.lib_ignore}
 ;endregion
+
+
+[env:wt-sc01-plus_8MB]
+extends = wt-sc01-plus, esp32s3_8mb_v2
+
+[env:wt-sc01-plus_16MB]
+extends = wt-sc01-plus, esp32s3_16mb_v2
