--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -9,6 +9,7 @@ extra_configs =
     ; user_setups/darwin_sdl/*.ini
     ; user_setups/esp32/*.ini
     ; user_setups/esp32s2/*.ini
+    ; user_setups/esp32s3/*.ini
     ; user_setups/linux_sdl/*.ini
     ; user_setups/stm32f4xx/*.ini
     ; user_setups/win32/*.ini
