--- a/user_setups/esp32s3/wt32-sc01-plus.ini
+++ b/user_setups/esp32s3/wt32-sc01-plus.ini
@@ -5,7 +5,7 @@
 ;               - ft6336 touch controller           ;
 ;***************************************************;
 
-[wt-sc01-plus]
+[wt32-sc01-plus]
 board = esp32s3
 
 build_flags =
@@ -62,8 +62,8 @@ lib_ignore =
 ;endregion
 
 
-[env:wt-sc01-plus_8MB]
-extends = wt-sc01-plus, esp32s3_8mb_v2
+[env:wt32-sc01-plus_8MB]
+extends = wt32-sc01-plus, esp32s3_8mb_v2
 
-[env:wt-sc01-plus_16MB]
-extends = wt-sc01-plus, esp32s3_16mb_v2
+[env:wt32-sc01-plus_16MB]
+extends = wt32-sc01-plus, esp32s3_16mb_v2
