Switch back to TFT_eSPI

--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -14,8 +14,8 @@ build_flags =
     ${esp32.ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
-    -D LGFX_USE_V1=1
-    ;-D USER_SETUP_LOADED=1
+    ;-D LGFX_USE_V1=1
+    -D USER_SETUP_LOADED=1
     -D ST7796_DRIVER=1
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
@@ -42,8 +42,8 @@ lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
-    ; ${tft_espi.lib_deps}
-    ${lovyangfx.lib_deps}
+    ${tft_espi.lib_deps}
+    ;${lovyangfx.lib_deps}
     ${ft6336.lib_deps}
 
 lib_ignore =
