Update Lilypi LovyanGFX drivers

--- a/user_setups/esp32/ttgo-lilygo-pi.ini
+++ b/user_setups/esp32/ttgo-lilygo-pi.ini
@@ -54,7 +54,7 @@ lib_ignore =
 ;endregion
 
 [env:ttgo-lilygo-pi_st7796]
-extends = esp32-3248s035, esp32_16mb_v2
+extends = ttgo-lilygo-pi, esp32_16mb_v2
 build_flags =
     ${ttgo-lilygo-pi.build_flags}
     -D ST7796_DRIVER=1
@@ -67,12 +67,12 @@ lib_ignore =
     ${ttgo-lilygo-pi.lib_ignore}
     
 [env:ttgo-lilygo-pi_ili9481]
-extends = esp32-3248s035, esp32_16mb_v2
+extends = ttgo-lilygo-pi, esp32_16mb_v2
 build_flags =
     ${ttgo-lilygo-pi.build_flags}
     -D ILI9481_DRIVER=1
-    -D INVERT_COLORS=1
-    -D TFT_INVERSION_ON   ; for inverted colors
+    ;-D INVERT_COLORS=1
+    ;-D TFT_INVERSION_ON   ; for inverted colors
     -D SPI_FREQUENCY=27000000
     -D I2C_TOUCH_ADDRESS=0x5D ; or 0x14
     -D TOUCH_DRIVER=0x0911 ; GT911 Capacitive I2C touch panel driver
