Add Arduino_GFX driver

--- a/platformio.ini
+++ b/platformio.ini
@@ -105,6 +105,10 @@ build_src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<l
 lib_deps =
     lovyan03/LovyanGFX@^0.4.18
 
+[arduinogfx]
+lib_deps =
+    moononournation/GFX Library for Arduino @ ^1.3.0
+
 [tft_espi]
 lib_deps =
     ;bodmer/TFT_eSPI@2.4.72
