--- a/user_setups/esp32s3/gs-t3e.ini
+++ b/user_setups/esp32s3/gs-t3e.ini
@@ -20,7 +20,7 @@ build_flags =
 ;region -- LovyanGFX build options ------------------------
     -D HASP_USE_ARDUINOGFX=1
     -D ST7701_DRIVER=1
-    ;-D TOUCH_DRIVER=0x911
+    -D TOUCH_DRIVER=0x911
     -D TFT_WIDTH=480
     -D TFT_HEIGHT=480
     -D SPI_FREQUENCY=20000000
