Add ESP32-S3 board definitions

--- a/user_setups/esp32s3/gs-t3e.ini
+++ b/user_setups/esp32s3/gs-t3e.ini
@@ -1,11 +1,11 @@
 ;***************************************************;
-;         GS-T3E with TFT 3.95"                     ;
+;         Generic T3E with TFT 3.95"                ;
 ;               - Custom esp32-s3 board             ;
 ;               - st7701s TFT                       ;
 ;               - gt911 touch controller            ;
 ;***************************************************;
 
-[gs-t3e]
+[odm-t3e]
 ;board = esp32-s3-devkitc-1
 board = esp32s3_qio_opi
 
@@ -63,8 +63,5 @@ lib_ignore =
 ;endregion
 
 
-;[env:gs-t3e_8MB]
-;extends = gs-t3e, esp32s3_8mb_v2
-
 [env:gs-t3e_16MB]
-extends = gs-t3e, esp32s3_16mb_v2
+extends = odm-t3e, esp32s3_16mb_v2
