Add Lilygo Ttgo Lily Pi ESP32

--- a/user_setups/esp32/lilygo-lily-pi.ini
+++ b/user_setups/esp32/lilygo-lily-pi.ini
@@ -1,11 +1,11 @@
 ;***************************************************;
-;          Lilygo®Ttgo Pi ESP32 with TFT 3.5"       ;
+;          Lilygo®Ttgo Lily Pi ESP32 with TFT 3.5"  ;
 ;               - Custom PCB with ESP32-WROVER      ;
 ;               - IPS st7796 or ili9481 LCD         ;
 ;               - FT6236 or GT911 touch controller  ;
 ;***************************************************;
 
-[ttgo-lilygo-pi]
+[lilygo-lily-pi]
 extends = esp32_16mb_v2
 board = esp32dev
 
@@ -53,23 +53,23 @@ lib_ignore =
     ${arduino_esp32_v2.lib_ignore}
 ;endregion
 
-[env:ttgo-lilygo-pi_st7796]
-extends = ttgo-lilygo-pi, esp32_16mb_v2
+[env:lilygo-lily-pi_st7796]
+extends = lilygo-lily-pi, esp32_16mb_v2
 build_flags =
-    ${ttgo-lilygo-pi.build_flags}
+    ${lilygo-lily-pi.build_flags}
     -D ST7796_DRIVER=1
     -D SPI_FREQUENCY=40000000
     -D I2C_TOUCH_ADDRESS=0x38
     -D TOUCH_DRIVER=0x6336
 lib_deps =
-    ${ttgo-lilygo-pi.lib_deps}
+    ${lilygo-lily-pi.lib_deps}
 lib_ignore =
-    ${ttgo-lilygo-pi.lib_ignore}
+    ${lilygo-lily-pi.lib_ignore}
     
-[env:ttgo-lilygo-pi_ili9481]
-extends = ttgo-lilygo-pi, esp32_16mb_v2
+[env:lilygo-lily-pi_ili9481]
+extends = lilygo-lily-pi, esp32_16mb_v2
 build_flags =
-    ${ttgo-lilygo-pi.build_flags}
+    ${lilygo-lily-pi.build_flags}
     -D ILI9481_DRIVER=1
     ;-D INVERT_COLORS=1
     ;-D TFT_INVERSION_ON   ; for inverted colors
@@ -77,6 +77,6 @@ build_flags =
     -D I2C_TOUCH_ADDRESS=0x5D ; or 0x14
     -D TOUCH_DRIVER=0x0911 ; GT911 Capacitive I2C touch panel driver
 lib_deps =
-    ${ttgo-lilygo-pi.lib_deps}
+    ${lilygo-lily-pi.lib_deps}
 lib_ignore =
-    ${ttgo-lilygo-pi.lib_ignore}
+    ${lilygo-lily-pi.lib_ignore}
