--- a/user_setups/esp32/esp32-3248s035.ini
+++ b/user_setups/esp32/esp32-3248s035.ini
@@ -1,7 +1,7 @@
 ;***************************************************;
-;        ESP32-WROOM custom dev board with          ;
+;       Sunton ESP32-WROOM custom dev board with    ;
 ;               - ST7796 TFT SPI 4-WIRE             ;
-;               - xpt2046 touch controller          ;
+;               - XPT2046 / GT911 touch controller  ;
 ;***************************************************;
 
 [esp32-3248s035]
@@ -61,25 +61,25 @@ build_flags =
     -D I2C_TOUCH_FREQUENCY=0
     -D SPI_TOUCH_FREQUENCY=2500000
 
-[env:esp32-3248s035c_4MB]
-extends = esp32-3248s035, esp32_4mb_v2
-build_flags =
-    ${esp32-3248s035.build_flags}
-    ;-D TOUCH_CS=-1
-    -D TOUCH_DRIVER=0x0911 ; GT911 Capacitive touch panel driver
-    -D TOUCH_SDA=33
-    -D TOUCH_SCL=32
-    -D TOUCH_RST=25
-    -D TOUCH_IRQ=21
-    -D I2C_TOUCH_PORT=1
-    -D I2C_TOUCH_ADDRESS=0x5D ; or 0x14
-    -D I2C_TOUCH_FREQUENCY=400000
-    -D SPI_TOUCH_FREQUENCY=2500000
-lib_deps =
-    ${esp32-3248s035.lib_deps}
-    ${goodix.lib_deps}
+;[env:esp32-3248s035c_4MB]
+;extends = esp32-3248s035, esp32_4mb_v2
+;build_flags =
+;    ${esp32-3248s035.build_flags}
+;    ;-D TOUCH_CS=-1
+;    -D TOUCH_DRIVER=0x0911 ; GT911 Capacitive touch panel driver
+;    -D TOUCH_SDA=33
+;    -D TOUCH_SCL=32
+;    -D TOUCH_RST=25
+;    -D TOUCH_IRQ=21
+;    -D I2C_TOUCH_PORT=1
+;    -D I2C_TOUCH_ADDRESS=0x5D ; or 0x14
+;    -D I2C_TOUCH_FREQUENCY=400000
+;    -D SPI_TOUCH_FREQUENCY=2500000
+;lib_deps =
+;    ${esp32-3248s035.lib_deps}
+;    ${goodix.lib_deps}
 
-[env:esp32-3248s035c_4MB_lovyan]
+[env:esp32-3248s035c_4MB]
 extends = esp32_4mb_v2
 board = esp32dev
 
@@ -93,6 +93,8 @@ build_flags =
     ;-D USER_SETUP_LOADED=1
     -D LGFX_USE_V1=1
     -D ST7796_DRIVER=1
+    -D TOUCH_DRIVER=0x0911 ; GT911 Capacitive I2C touch panel driver
+    -D HASP_USE_LGFX_TOUCH=1
     -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
@@ -103,12 +105,12 @@ build_flags =
     -D SUPPORT_TRANSACTIONS    
     -D TOUCH_SDA=33
     -D TOUCH_SCL=32
-    -D TOUCH_IRQ=21
+    ;-D TOUCH_IRQ=21
+    -D TOUCH_IRQ=-1
     -D TOUCH_RST=25
     -D I2C_TOUCH_FREQUENCY=400000
     -D I2C_TOUCH_PORT=1
     -D I2C_TOUCH_ADDRESS=0x5D ; or 0x14
-    -D TOUCH_DRIVER=0x0911 ; GT911 Capacitive I2C touch panel driver
     -D SPI_FREQUENCY=65000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=20000000
