Update ini files

--- a/user_setups/esp32/esp32-3248s035.ini
+++ b/user_setups/esp32/esp32-3248s035.ini
@@ -1,7 +1,7 @@
 ;***************************************************;
 ;       Sunton ESP32-WROOM custom dev board with    ;
 ;               - ST7796 TFT SPI 4-WIRE             ;
-;               - XPT2046 / GT911 touch controller  ;
+;               - XPT2046 or GT911 touch controller ;
 ;***************************************************;
 
 [esp32-3248s035]
