--- a/user_setups/esp32s3/esp32-s3-devkitc-1.ini
+++ b/user_setups/esp32s3/esp32-s3-devkitc-1.ini
@@ -8,7 +8,7 @@
 [env:esp32-s3-devkitc-1]
 extends = esp32s3_8mb_v2
 ;board = esp32-s3-devkitc-1
-board = esp32s3_opi
+board = esp32s3_opi_opi
 
 build_flags =
     ${env.build_flags}
