--- a/user_setups/esp32s3/freetouchdeck-s3.ini
+++ b/user_setups/esp32s3/freetouchdeck-s3.ini
@@ -4,40 +4,43 @@
 ;               - xpt2046 touch controller          ;
 ;***************************************************;
 
-[freetouchdeck]
-board = esp32dev
+[freetouchdecks3]
+;board = esp32-s3-devkitc-1
+board = esp32s3_opi_opi
 
 build_flags =
     ${env.build_flags}
-    ${esp32.build_flags}
-    -D HASP_MODEL="FreeTouchDeck"
-    -DBOARD_HAS_PSRAM               ; uses 78kB
-    ;-mfix-esp32-psram-cache-issue  ; uses 24kB
+    ${esp32s3.build_flags}
+    ${esp32s3.no_ps_ram}
+    -D HASP_MODEL="FreeTouchDeck S3"
 
 ;region -- TFT_eSPI build options ------------------------
-    ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D USER_SETUP_LOADED=1
     ;-D LGFX_USE_V1=1
     -D ILI9488_DRIVER=1
     -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
-    -D TFT_CS=15      ;// Chip select control pin
-    -D TFT_DC=2       ;// Data Command control pin
-    -D TFT_RST=4      ;// Reset pin (could connect to RST pin)
-    -D TFT_BCKL=32    ;None, configurable via web UI (e.g. 2 for D4)
+    -D TFT_MISO=13
+    -D TFT_MOSI=11
+    -D TFT_SCLK=12
+    -D TFT_CS=10      ;// Chip select control pin
+    -D TFT_DC=6       ;// Data Command control pin
+    -D TFT_RST=5      ;// Reset pin (could connect to RST pin)
+    -D TFT_BCKL=7     ;None, configurable via web UI (e.g. 2 for D4)
     -D SUPPORT_TRANSACTIONS
-    -D TOUCH_CS=21
+    -D                           =15
     -D TOUCH_DRIVER=0x2046 ; XPT2606 Resistive touch panel driver
     -D TOUCH_SDA=-1
     -D TOUCH_SCL=-1
-    -D TOUCH_IRQ=-1
+    -D TOUCH_IRQ=16
     -D I2C_TOUCH_PORT=0
     -D I2C_TOUCH_ADDRESS=0
     -D I2C_TOUCH_FREQUENCY=0
     -D SPI_FREQUENCY=27000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=20000000
+    -D SD_CS=4
 ;endregion
 
 ; -- Debugging options -----------------------------
@@ -46,20 +49,17 @@ build_flags =
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
-    ${esp32.lib_deps}
-    ${arduino_esp32_v2.lib_deps}
+    ${esp32s3.lib_deps}
+    ${arduino_esp32s3_v2.lib_deps}
     ${tft_espi.lib_deps}
     ;${lovyangfx.lib_deps}
     
 lib_ignore =
     ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
+    ${esp32s3.lib_ignore}
+    ${arduino_esp32s3_v2.lib_ignore}
 ;endregion
 
 
-[env:freetouchdeck_4MB]
-extends = freetouchdeck, esp32_4mb_v2
-
-[env:freetouchdeck_8MB]
-extends = freetouchdeck, esp32_8mb_v2
+[env:freetouchdeck-s3_8MB]
+extends = freetouchdecks3, esp32s3_8mb_v2
