Remove LittleFS_esp32 from lib_deps

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -71,7 +71,7 @@ lib_ignore =
 
 lib_deps =
     git+https://github.com/fvanroie/ConsoleInput.git#dev
-    lorol/LittleFS_esp32@^1.0.6   ; for v1
+    ; lorol/LittleFS_esp32@^1.0.6    ; for Arduino v1 only
     bxparks/AceButton@^1.9.2         ; GPIO button library
     bblanchon/StreamUtils@^1.6.3     ; for EEPromStream and BufferedTelnetClient
     knolleary/PubSubClient@^2.8.0    ; MQTT client
@@ -112,7 +112,7 @@ board_build.filesystem = littlefs
 monitor_filters = esp32_exception_decoder
 extra_scripts =
     ${esp32.extra_scripts}
-lib_deps = lorol/LittleFS_esp32@^1.0.6   ; for v1
+lib_deps = lorol/LittleFS_esp32@^1.0.6   ; Needed for Arduino v1 only
 lib_ignore =
 
 [esp32_4mb]
@@ -144,7 +144,7 @@ monitor_filters = esp32_exception_decoder
 extra_scripts =
     ${esp32.extra_scripts}
 lib_deps =
-lib_ignore = LittleFS_esp32    ; for v2
+lib_ignore = LittleFS_esp32    ; Not needed for Arduino v2
 
 [esp32_4mb_v2]
 extends = esp32, arduino_esp32_v2
