Remove LittleFS_esp32 from lib_ignore

--- a/user_setups/esp32s3/_esp32s3.ini
+++ b/user_setups/esp32s3/_esp32s3.ini
@@ -115,7 +115,7 @@ monitor_filters = esp32_exception_decoder
 extra_scripts =
     ${esp32.extra_scripts}
 lib_deps =
-lib_ignore = LittleFS_esp32    ; for v2
+lib_ignore = 
 
 [esp32s3_4mb_v2]
 extends = esp32s3, arduino_esp32s3_v2
