Lovyan Resistive Touch calibration #220

--- a/user_setups/esp32/esp32-2832s028.ini
+++ b/user_setups/esp32/esp32-2832s028.ini
@@ -30,6 +30,7 @@ build_flags =
     -D SUPPORT_TRANSACTIONS
     -D SPI_FREQUENCY=55000000
     -D SPI_READ_FREQUENCY=20000000
+    -D TOUCH_OFFSET_ROTATION=0  ; 1=swap xy, 2=invert x, 4=inverty
 
     -D ESP32_2432S028R=1
 ;endregion
