--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -23,21 +23,51 @@ build_flags =
 ;region -- Default Build Environments : Used when Build All ---
 extra_default_envs =
     ; Uncomment specific environments or create extra:
-    ; az-touch-mod-esp32_ili9341
+    ; az-touch-mod-esp32_ili9341_4MB
+    ; az-touch-mod-esp32_ili9341_8MB
     ; d1-mini-esp32_ili9341
-    ; d1-r32-unoshield
-    ; esp32-9341-unoshield-analog
-    ; esp12e-st7735
+    ; d1-r32-unoshield_ili9341_adc
+    ; d1-r32-unoshield_ili9486_adc
+    ; d1-r32-waveshare_ili9486
+    ; esp32-2432s028r_4MB
+    ; esp32-3248s035c_4MB
+    ; esp32-3248s035c_4MB_lovyan
+    ; esp32-3248s035r_4MB
+    ; esp32-one_ili9486
     ; esp32-one_st7796
-    ; esp32dev-mrb3511
-    ; esp32dev-ili9488
+    ; esp32-s3-4827s043c_16MB
+    ; esp32-s3-4827s043r_16MB
+    ; esp32-s3-8048s043c_16MB
+    ; esp32-touchdown
+    ; freetouchdeck_4MB
+    ; freetouchdeck_8MB
+    ; freetouchdeck-s3_8MB
+    ; gs-t3e_16MB
+    ; huzzah32-featherwing-24
+    ; huzzah32-featherwing-35
     ; lanbon_l8
+    ; lanbon_l8_eth
+    ; lilygo-lily-pi_ili9481
+    ; lilygo-lily-pi_st7796
     ; lolin-d32-pro_ili9341
-    ; my_custom_build
+    ; m5stack-core2
+    ; m5stack-tough
+    ; makerfabs-s3-tft35-spi
+    ; makerfabs-tft35-cap
+    ; makerfabs-tft-s2_ili9488
     ; nodemcu32s-raspi
+    ; s2-mini-esp32s2_ili9341
     ; ttgo_esp32_poe-ili9341
     ; ttgo-lilygo-pi_ili9481
-    ; wt32-sc01
+    ; ttgo-lilygo-pi_st7796
+    ; ttgo-t7-v1.5_ili9341_16MB
+    ; ttgo-t7-v1.5_ili9341_4MB
+    ; wt32-sc01_16MB
+    ; wt32-sc01_4MB
+    ; wt32-sc01-plus_16MB
+    ; wt32-sc01-plus_8MB
+    ; wt-86-32-3zw1
+    ; yeacreate-nscreen32
 ;endregion
 
 ;region -- Define your local COM ports for each environment ---
