--- a/user_setups/esp32/esp32-3248s035.ini
+++ b/user_setups/esp32/esp32-3248s035.ini
@@ -53,6 +53,7 @@ build_flags =
     ${esp32-3248s035.build_flags}
     -D TOUCH_CS=33
     -D TOUCH_DRIVER=0x2046 ; XPT2606 Resistive touch panel driver
+    -D HASP_USE_LGFX_TOUCH=1
     -D TOUCH_SDA=-1
     -D TOUCH_SCL=-1
     -D TOUCH_IRQ=-1
@@ -61,23 +62,6 @@ build_flags =
     -D I2C_TOUCH_FREQUENCY=0
     -D SPI_TOUCH_FREQUENCY=2500000
 
-;[env:esp32-3248s035c_4MB]
-;extends = esp32-3248s035, esp32_4mb_v2
-;build_flags =
-;    ${esp32-3248s035.build_flags}
-;    ;-D TOUCH_CS=-1
-;    -D TOUCH_DRIVER=0x0911 ; GT911 Capacitive touch panel driver
-;    -D TOUCH_SDA=33
-;    -D TOUCH_SCL=32
-;    -D TOUCH_RST=25
-;    -D TOUCH_IRQ=21
-;    -D I2C_TOUCH_PORT=1
-;    -D I2C_TOUCH_ADDRESS=0x5D ; or 0x14
-;    -D I2C_TOUCH_FREQUENCY=400000
-;    -D SPI_TOUCH_FREQUENCY=2500000
-;lib_deps =
-;    ${esp32-3248s035.lib_deps}
-;    ${goodix.lib_deps}
 
 [env:esp32-3248s035c_4MB]
 extends = esp32_4mb_v2
