Add Sunton ESP32-S3 TFT 5.0" and 7.0"

--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -1,11 +1,11 @@
 ;***************************************************;
-;         Sunton ESP32-S3 TFT 4.3"                  ;
-;               - Custom esp32-s3 board             ;
-;               - st7701s TFT                       ;
-;               - xpt2046 or gt911 touch controller ;
+;    Sunton ESP32-S3 TFT 4.3", 5.0", 7.0"           ;
+;          - Custom esp32-s3 board                  ;
+;          - ili6485 480x272 or st7262 IPS 800x480  ;
+;          - xpt2046 or gt911 touch controller      ;
 ;***************************************************;
 
-[sunton-esp32-s3-s043]
+[sunton-esp32-s3-tft]
 board = esp32s3_qio_opi
 
 build_flags =
@@ -15,7 +15,6 @@ build_flags =
     ; -D HASP_MODEL="Sunton 4.3\""
     ;-DARDUINO_USB_CDC_ON_BOOT
 	;-DUSE_USB_CDC_CONSOLE
-    -DSUNTON_43
 
 ;region -- LovyanGFX build options ------------------------
     -D HASP_USE_ARDUINOGFX=1
@@ -57,11 +56,11 @@ lib_ignore =
 ;endregion
 
 
-[env:esp32-s3-4827s043r_16MB]
-extends = sunton-esp32-s3-s043, esp32s3_16mb_v2
+[env:sunton-4827s043r_16MB]
+extends = sunton-esp32-s3-tft, esp32s3_16mb_v2
 
 build_flags =
-    ${sunton-esp32-s3-s043.build_flags}
+    ${sunton-esp32-s3-tft.build_flags}
     -D HASP_MODEL="Sunton ESP32-4827S043R"
     -D TFT_WIDTH=480
     -D TFT_HEIGHT=272
@@ -73,11 +72,11 @@ build_flags =
     -D TOUCH_IRQ=18
 
 
-[env:esp32-s3-4827s043c_16MB]
-extends = sunton-esp32-s3-s043, esp32s3_16mb_v2
+[env:sunton-4827s043c_16MB]
+extends = sunton-esp32-s3-tft, esp32s3_16mb_v2
 
 build_flags =
-    ${sunton-esp32-s3-s043.build_flags}
+    ${sunton-esp32-s3-tft.build_flags}
     -D HASP_MODEL="Sunton ESP32-4827S043C"
     -D TFT_WIDTH=480
     -D TFT_HEIGHT=272
@@ -88,15 +87,15 @@ build_flags =
     -D TOUCH_RST=38
     -D I2C_TOUCH_FREQUENCY=400000
 lib_deps =
-    ${sunton-esp32-s3-s043.lib_deps}
+    ${sunton-esp32-s3-tft.lib_deps}
     ${goodix.lib_deps}
 
 
-[env:esp32-s3-8048s043c_16MB]
-extends = sunton-esp32-s3-s043, esp32s3_16mb_v2
+[env:sunton-8048s043c_16MB]
+extends = sunton-esp32-s3-tft, esp32s3_16mb_v2
 
 build_flags =
-    ${sunton-esp32-s3-s043.build_flags}
+    ${sunton-esp32-s3-tft.build_flags}
     -D HASP_MODEL="Sunton ESP32-8048S043C"
     -D TFT_WIDTH=800
     -D TFT_HEIGHT=480
@@ -109,5 +108,47 @@ build_flags =
     -D TOUCH_RST=38
     -D I2C_TOUCH_FREQUENCY=400000
 lib_deps =
-    ${sunton-esp32-s3-s043.lib_deps}
+    ${sunton-esp32-s3-tft.lib_deps}
+    ${goodix.lib_deps}
+
+
+[env:sunton-8048s050c_16MB]
+extends = sunton-esp32-s3-tft, esp32s3_16mb_v2
+
+build_flags =
+    ${sunton-esp32-s3-tft.build_flags}
+    -D HASP_MODEL="Sunton ESP32-8048S050C"
+    -D TFT_WIDTH=800
+    -D TFT_HEIGHT=480
+    -D TOUCH_WIDTH=800
+    -D TOUCH_HEIGHT=480
+    -D TOUCH_DRIVER=0x911
+    -D TOUCH_SCL=20
+    -D TOUCH_SDA=19
+    -D TOUCH_IRQ=-1
+    -D TOUCH_RST=38
+    -D I2C_TOUCH_FREQUENCY=400000
+lib_deps =
+    ${sunton-esp32-s3-tft.lib_deps}
+    ${goodix.lib_deps}
+    
+
+[env:sunton-8048s070c_16MB]
+extends = sunton-esp32-s3-tft, esp32s3_16mb_v2
+
+build_flags =
+    ${sunton-esp32-s3-tft.build_flags}
+    -D HASP_MODEL="Sunton ESP32-8048S070C"
+    -D TFT_WIDTH=800
+    -D TFT_HEIGHT=480
+    -D TOUCH_WIDTH=800
+    -D TOUCH_HEIGHT=480
+    -D TOUCH_DRIVER=0x911
+    -D TOUCH_SCL=20
+    -D TOUCH_SDA=19
+    -D TOUCH_IRQ=-1
+    -D TOUCH_RST=38
+    -D I2C_TOUCH_FREQUENCY=400000
+lib_deps =
+    ${sunton-esp32-s3-tft.lib_deps}
     ${goodix.lib_deps}
