Remove sunton-4827s043r_16MB

--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -58,7 +58,7 @@ build_flags =
     -D TFT_B3=9
     -D TFT_B4=1
 
-[env:sunton-4827s043r_16MB]
+[sunton-4827s043r_16MB]
 extends = sunton-esp32-s3-tft, esp32s3_16mb_v2
 
 build_flags =
@@ -81,7 +81,7 @@ build_flags =
     -D TFT_PREFER_SPEED=9000000
     -D TFT_AUTO_FLUSH=1
     ; Touch Setttings
-    -D TOUCH_DRIVER=0x2046
+    ;-D TOUCH_DRIVER=0x2046
     -D TOUCH_SCLK=12
     -D TOUCH_MISO=13
     -D TOUCH_MOSI=11
